# nibarchive

./: .buildinfo  README.md  genindex.html  index.html  model.html  objects.inv  parser.html  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt  model.rst.txt
docs/source/: conf.py  parser.rst
nibarchive/: __main__.py
